adding js file to store page, now remove items from cart and adding them available.

--- a/src/main/webapp/store.html
+++ b/src/main/webapp/store.html
@@ -15,6 +15,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="javascript/store.js" async></script>
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -145,15 +146,17 @@
                 <span class="shop-item-title">10x20 type pine wood </span>
                 <img class="shop-item-image" src="resources/10X20type.jpg" alt="">
                 <div class="shop-item-details">
-                    <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                    <input class="input-length" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
                         placeholder="length in centimeters" style="margin-bottom: 3px;">
                     <div>
-                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <input class="input-quantity" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="quantity">
                     </div>
                 </div>
                 <div>
                     <span>15$ per meter</span>
-                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;" class="btn btn-primary">
+                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;"
+                        class="btn btn-primary shop-item-btn">
                         <span id="AddToCart">
                             Add To Cart
                         </span>
@@ -164,15 +167,17 @@
                 <span class="shop-item-title">10x10 type pine wood </span>
                 <img class="shop-item-image" src="resources/10X10type.jpg" alt="">
                 <div class="shop-item-details">
-                    <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                    <input class="input-length" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
                         placeholder="length in centimeters" style="margin-bottom: 3px;">
                     <div>
-                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <input class="input-quantity" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="quantity">
                     </div>
                 </div>
                 <div>
                     <span>12$ per meter</span>
-                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;" class="btn btn-primary">
+                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;"
+                        class="btn btn-primary shop-item-btn">
                         <span id="AddToCart">
                             Add To Cart
                         </span>
@@ -183,15 +188,17 @@
                 <span class="shop-item-title">10x2 type pine wood </span>
                 <img class="shop-item-image" src="resources/10X2type.jpg" alt="">
                 <div class="shop-item-details">
-                    <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                    <input class="input-length" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
                         placeholder="length in centimeters" style="margin-bottom: 3px;">
                     <div>
-                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <input class="input-quantity" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="quantity">
                     </div>
                 </div>
                 <div>
                     <span>8$ per meter</span>
-                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;" class="btn btn-primary">
+                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;"
+                        class="btn btn-primary shop-item-btn">
                         <span id="AddToCart">
                             Add To Cart
                         </span>
@@ -202,15 +209,17 @@
                 <span class="shop-item-title">10x5 type pine wood </span>
                 <img class="shop-item-image" src="resources/10X5type.jpg" alt="">
                 <div class="shop-item-details">
-                    <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                    <input class="input-length" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
                         placeholder="length in centimeters" style="margin-bottom: 3px;">
                     <div>
-                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <input class="input-quantity" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="quantity">
                     </div>
                 </div>
                 <div>
                     <span>13$ per meter</span>
-                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;" class="btn btn-primary">
+                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;"
+                        class="btn btn-primary shop-item-btn">
                         <span id="AddToCart">
                             Add To Cart
                         </span>
@@ -221,15 +230,17 @@
                 <span class="shop-item-title">15x5 type pine wood </span>
                 <img class="shop-item-image" src="resources/15X5type.jpg" alt="">
                 <div class="shop-item-details">
-                    <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                    <input class="input-length" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
                         placeholder="length in centimeters" style="margin-bottom: 3px;">
                     <div>
-                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <input class="input-quantity" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="quantity">
                     </div>
                 </div>
                 <div>
                     <span>14$ per meter</span>
-                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;" class="btn btn-primary">
+                    <button role="button" name="add" id="AddToCart" style="margin-top: 5px;"
+                        class="btn btn-primary shop-item-btn">
                         <span id="AddToCart">
                             Add To Cart
                         </span>
@@ -239,17 +250,18 @@
             <div class="shop-item">
                 <span class="shop-item-title">5x5 type pine wood </span>
                 <img class="shop-item-image" src="resources/5X5type.jpg" alt="">
-                <div>
-                    <input type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                <div class="shop-item-details">
+                    <input class="input-length" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
                         placeholder="length in centimeters" style="margin-bottom: 3px;">
                     <div>
-                        <input type="number" min="0" pattern="[0-9]*" inputmode="numeric" placeholder="quantity">
+                        <input class="input-quantity" type="number" min="0" pattern="[0-9]*" inputmode="numeric"
+                            placeholder="quantity">
                     </div>
                 </div>
-                <div class="shop-item-details">
+                <div>
                     <span>6$ per meter</span>
                     <button role="button" name="add" id="AddToCart" style="margin-top: 5px; margin-left: 2px;"
-                        class="btn btn-primary">
+                        class="btn btn-primary shop-item-btn">
                         <span id="AddToCart">
                             Add To Cart
                         </span>
@@ -271,20 +283,7 @@
             <span class="cart-quantity cart-header cart-column">Quantity</span>
         </div>
         <div class="cart-items">
-            <div class="cart-row">
-                <div class="item-column cart-column">
-                    <img class="cart-item-image" src="resources/10X10type.jpg" width="100">
-                    <span class="cart-item-title">10x10 type</span>
-                </div>
-                <div class="cart-length cart-column input">
-                    <input class="cart-input" type="number" value="1">
-                </div>
 
-                <div class="cart-quantity cart-column input">
-                    <input class="cart-input" type="number" value="6">
-                    <button class="btn btn-danger" role="button">REMOVE</button>
-                </div>
-            </div>
         </div>
 
         <button class="btn btn-primary btn-purchase" role="button">PURCHASE</button>
