--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="javascript/login.js"></script>
   <script src="javascript/register.js"></script>
+  <script src="javascript/index.js"></script>
   
 </head>
 
