--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,6 +41,7 @@
         		<li><a href="#services">SERVICES</a></li>
         		<li><a href="#portfolio">PORTFOLIO</a></li>
         		<li><a href="#products">PRODUCTS</a></li>
+        		<li><a href="/final-project/store.html">STORE</a></li>
         		<li><a href="#contact">CONTACT</a></li>
       		</ul>
       	</div>
