add load products and get all products in DB

--- a/src/main/webapp/store.html
+++ b/src/main/webapp/store.html
@@ -139,7 +139,9 @@
     <br>
     <br>
 
-    <section class="container content-section">
+
+	<!-- 		items      -->
+    <section class="container content-section" id="items">
         <h2 class="section-header">Items</h2>
         <div class="shop-items">
             <div class="shop-item">
@@ -270,10 +272,11 @@
             </div>
         </div>
     </section>
-    <section>
+    <!-- 		/items      -->
+    
+    <section></section>
 
-    </section>
-
+	<!-- 		cart      -->
     <section class="container content-section">
         <h2 class="section-header">Cart</h2>
 
@@ -287,10 +290,8 @@
         </div>
 
         <button class="btn btn-primary btn-purchase" role="button">PURCHASE</button>
-
-
     </section>
-
+	<!-- 	    /cart      -->
 
 </body>
 
