add product to user page on admin user

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -20,10 +20,10 @@
 <div class="container">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="row">
-			<div class="col-sm-4"><a class="navbar-brand" href="index.html">Home</a></div>
+			<div class="col-sm-3"><a class="navbar-brand" href="index.html">Home</a></div>
 		
-			<div class="col-sm-4" align="center">
-				<ul class="nav navbar-nav">
+			<div class="col-sm-5" align="center" >
+				<ul class="nav navbar-nav" id="nav-bar-items">
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#orders">Orders</a></li>
 					<li><a href="#messages">Messages</a></li>
