--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -67,6 +67,14 @@
 		</div> <!-- /container -->
 	</div>
 
+	<!-- products -->
+	<p><img alt="" src="resources/product-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D">Products</h3><a href=""> new</a>
+	<p></p>
+	
+	
+	<!-- /products -->
+	
+	
 	<!-- projects -->
 	<p><img alt="" src="resources/project-icon2.jpeg" class="messages-icon"><h3 style="display:inline;color:#1F618D">Projects</h3><a href=""> new</a>
 	<p></p>
