add product and cancel buttons added

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -68,9 +68,12 @@
 	</div>
 
 	<!-- products -->
-	<p><img alt="" src="resources/product-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D">Products</h3><a href=""> new</a>
+	<p><img alt="" src="resources/product-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D">Products</h3><a href="#" onclick="showAddProduct()"> new</a>
 	<p></p>
-	
+	<div class="container" id="products">
+		<form id="products-form">
+		</form>
+	</div>
 	
 	<!-- /products -->
 	
