add reply locally

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -9,7 +9,9 @@
   	<link rel="icon" type="image/png" href="resources/planks.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="javascript/message.js"></script> <!-- order of .js files must be kept !! -->
 	<script src="javascript/user.js"></script>
+
 
 
 </head>
