added separating line

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -75,7 +75,7 @@
 	<div class="container" id="products">
 		<form id="existing-products-form">
 			<p> <b>existing products</b></p>
-			<hr style="height:1px;border-width:0;background-color:gray">
+			<hr class="separator">
 			<table class="Table" id="products-table">
 				<thead>
 				<tr>
