--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -258,7 +258,7 @@
 	
 	<!-- personal detail -->
 	<p>
-	<p><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal" onclick="edit()"> edit</a>
+	<p><img alt="" src="resources/personal-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D"> Personal Details</h3><a href="#personal" onclick="edit()"> edit</a></p>
 		<div class="container" id="personal">
 
 		<form>
