--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -9,10 +9,10 @@
   	<link rel="icon" type="image/png" href="resources/planks.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<script src="javascript/message.js"></script> 	<!-- order of .js files must be kept !! -->
-	<script src="javascript/websocket.js"></script> <!-- order of .js files must be kept !! -->
-	<script src="javascript/utils.js"></script> <!-- order of .js files must be kept !! -->
-	<script src="javascript/user.js"></script>		<!-- order of .js files must be kept !! -->
+	<script src="javascript/message.js"></script> 	<!-- DO NOT change order of script files !! -->
+	<!-- script src="javascript/websocket.js"></script> <!-- DO NOT change order of script files !! -->
+	<script src="javascript/utils.js"></script> 	<!-- DO NOT change order of script files !! -->
+	<script src="javascript/user.js"></script>		<!-- DO NOT change order of script files !! -->
 
 
 
