--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -216,7 +216,7 @@
 			    	<div class="row"><select id="users-list" onchange="onSenderChosen()" style="width:90%;" multiple></select></div>
 			    </div>
 			    <div class="col-sm-9" id="">
-				    <div class="row"><label>messages</label></div>
+				    <div class="row"><span>messages (<label id="numberOfMessages"></label>)</span></div>
 				    <div class="row">
 		    			<form id="msg-display" class="msg-form">
 						</form>
