bug fixed: add cacel message to image upload option

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -210,21 +210,22 @@
 			<a href="#file" onclick="showFileLoad()">load images</a>
 		</span>
   		<div class="container">
+	    	<div class="row"><span>messages (<label id="numberOfMessages"></label>)</span></div>
+		    	<div class="row">
+	   				<form id="msg-display" class="msg-form">
+					</form>
+		    </div> 
   			<div class="row">
-			    <div class="col-sm-3" >
+			    <!-- div class="col-sm-3" >
 			    	<div class="row"><label>users</label></div>
 			    	<div class="row"><select id="users-list" onchange="onSenderChosen()" style="width:90%;" multiple></select></div>
-			    </div>
-			    <div class="col-sm-9" id="">
-				    <div class="row"><span>messages (<label id="numberOfMessages"></label>)</span></div>
-				    <div class="row">
-		    			<form id="msg-display" class="msg-form">
-						</form>
-				    </div> 
-			    </div>
+			    </div  -->
+			    <!-- div class="col-sm-9" id="" -->
+
+			    <!-- /div>  -->
 	  		</div>  		
   		</div>
-	<div class="container" id="content">
+
 
 
 	</div>
