--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -203,12 +203,13 @@
 	<!-- messages -->
 	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D; "> Messages</h3>
 		<span style="display:inline-block;">
-			<a href="#messages" onclick="showMsgText()"> user</a>
-			<a data-target="#myModal" data-toggle="modal" href="#myModal"> project</a>
+			<a href="#messages" onclick="showMsgText()"> send a new message</a>
+			or
+			<a data-target="#myModal" data-toggle="modal" href="#myModal">comment on a project</a>
 		</span>
-		<span style="float:right; padding:10px; padding-right:100px; ">
+		<!-- span style="float:right; padding:10px; padding-right:100px; ">
 			<a href="#file" onclick="showFileLoad()">load images</a>
-		</span>
+		</span  -->
   		<div class="container">
 	    	<div class="row"><span>messages (<label id="numberOfMessages"></label>)</span></div>
 		    	<div class="row">
@@ -233,6 +234,7 @@
 		
 	<!-- upload files -->
 	<div class="container" id="file-upload-area" style="display:none;">
+		<p>upload a picture</p>
 		<form>
 			<input id="file" type="file" accept=".jpeg, .jpg, .png" ondrop="drop(event)" onchange="onChange(this)" multiple/>
 		</form>	
