--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -13,6 +13,7 @@
 	<!-- script src="javascript/websocket.js"></script> <!-- DO NOT change order of script files !! -->
 	<script src="javascript/utils.js"></script> 	<!-- DO NOT change order of script files !! -->
 	<script src="javascript/user.js"></script>		<!-- DO NOT change order of script files !! -->
+	<script src="javascript/websocket2.js"></script>		<!-- DO NOT change order of script files !! -->
 
 
 
@@ -236,7 +237,7 @@
 	<div class="container" id="file-upload-area" style="display:none;">
 		<p>upload a picture</p>
 		<form>
-			<input id="file" type="file" accept=".jpeg, .jpg, .png" ondrop="drop(event)" onchange="onChange(this)" multiple/>
+			<input id="file" type="file" name='filename' accept=".jpeg, .jpg, .png" ondrop="drop()" onchange="onChange(this)" multiple/>
 		</form>	
 	</div>
 	
