--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -64,7 +64,7 @@
 					<h1>Navbar example</h1>
 					<p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
 					<p>To see the difference between static and fixed top navbars, just scroll.</p>
-					<p>
+					<p id="test-images">
 					  <a class="btn btn-lg btn-primary" href="#" role="button" onclick="testMessages()">Test Messages WS</a>
 					</p>
 				</div>
@@ -204,7 +204,7 @@
 	<!-- messages -->
 	<p id="messages" ><img alt="" src="resources/messages-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D; "> Messages</h3>
 		<span style="display:inline-block;">
-			<a href="#messages" onclick="showMsgText()"> send a new message</a>
+			<a href="#messages" onclick="showOutgoingMsgArea()"> send a new message</a>
 			or
 			<a data-target="#myModal" data-toggle="modal" href="#myModal">comment on a project</a>
 		</span>
@@ -217,7 +217,7 @@
 	   				<form id="msg-display" class="msg-form">
 					</form>
 		    	</div> 
-  			<div class="row">
+  			<div class="row" id="msg-area">
 			    <!-- div class="col-sm-3" >
 			    	<div class="row"><label>users</label></div>
 			    	<div class="row"><select id="users-list" onchange="onSenderChosen()" style="width:90%;" multiple></select></div>
@@ -231,7 +231,9 @@
 
 
 	</div>
-
+	
+	<div class="container" id="new-msg">
+	</div>
 		
 	<!-- upload files -->
 	<div class="container" id="file-upload-area" style="display:none;">
@@ -259,7 +261,7 @@
 			</p>
 		</form>	
 	</div>
-
+	
 	<!-- /messages -->
 	
 	<!-- personal detail -->
