--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -13,7 +13,7 @@
 	<!-- script src="javascript/websocket.js"></script> <!-- DO NOT change order of script files !! -->
 	<script src="javascript/utils.js"></script> 	<!-- DO NOT change order of script files !! -->
 	<script src="javascript/user.js"></script>		<!-- DO NOT change order of script files !! -->
-	<script src="javascript/websocket2.js"></script>		<!-- DO NOT change order of script files !! -->
+	<!-- script src="javascript/websocket2.js"></script>		<!-- DO NOT change order of script files !! -->
 
 
 
