--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -6,7 +6,7 @@
 
   	<link rel="stylesheet" type="text/css" href="css/user.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  	<link rel="icon" type="image/png" href="resources/planks.png">
+  	<link rel="icon" type="image/png" href="resources/lumber-icon-64.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<script src="javascript/message.js"></script> 	<!-- DO NOT change order of script files !! -->
