--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -210,6 +210,7 @@
 		<!--  a id="more-actions" href="#messages" onclick="test()" style="display:inline"><i class="fa fa-ellipsis-h"></i></a  -->
 			<select id="select-more-actions" style="display:inline;" onchange="messagesAction(this);">
 				<option selected>more..</option>
+				<option>new</option>
 				<option>reset (last view)</option>
 				<option>show all messages</option>
 				<option>show outgoing messages</option>
