add number of products and fix cancel button

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -74,8 +74,10 @@
 	</div>
 
 	<!-- products -->
-	<p><img alt="" src="resources/product-icon.png" class="messages-icon"><h3 style="display:inline;color:#1F618D">Products</h3><a href="#" onclick="showAddProduct()"> new</a>
-	<p></p>
+	<p><img alt="" src="resources/product-icon.png" class="messages-icon">
+		<h3 style="display:inline;color:#1F618D">Products(<span id="number-of-products">3</span>)</h3>
+		<a href="#" onclick="showAddProduct()"> new</a>
+	</p>
 	<div class="container" id="products">
 		<form id="existing-products-form">
 			<p> <b>existing products</b></p>
