add edit/remove a tag to products table

--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -91,9 +91,10 @@
 					<th>length</th>
 					<th>color</th>
 					<th>image</th>
+					<th>delete</th>
 				</tr>
 				</thead>
-				<tbody>
+				<tbody id="product-table-body">
 	      
 				</tbody>
 			</table>
